# mbeidler.github.io

./: .gitignore  .gitmodules  .travis.yml  CNAME  README.md  Site.hs  TypeChecked.cabal  about.html  about.markdown  blog.html  index.html  site.css
css/: sugar.css  syntax.css
posts/: 2014-09-19-bank-ocr-kata-post-1.html  2014-09-19-bank-ocr-kata-post-1.markdown  2014-09-19-bank-ocr-kata-post-2.html  2014-09-19-bank-ocr-kata-post-2.markdown  2014-10-16-bank-ocr-kata-1.html  2014-10-16-bank-ocr-kata-1.markdown  2014-10-22-bank-ocr-kata-1.html  2014-10-22-bank-ocr-kata-1.markdown  2014-10-23-bank-ocr-kata-2.html  2014-10-23-bank-ocr-kata-2.markdown  2016-01-01-bank-ocr-kata.html  2016-01-01-bank-ocr-kata.markdown  2016-1-1-bank-ocr-kata.markdown
tags/: Haskell.html  Kata.html
templates/: layout.html  linked-post.html  panel.html
