
name:                TypeChecked
version:             0.0.0.1
synopsis:            My personal blog and web site.
homepage:            http://www.typechecked.com
license:             GPL-2
license-file:        LICENSE
author:              Michael Beidler
maintainer:          michael.beidler@gmail.com
copyright:           (c) Michael Beidler 2014
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable TypeChecked
  main-is:
    Site.hs
  build-depends:
    base       >=4.7     && <4.8,
    blaze-html >= 0.5    && < 0.8,
    hakyll     >= 4.5
  default-language:    Haskell2010